--- a/bare dev/index.html
+++ b/bare dev/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css" />
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     </head>
     
     <body>
