--- a/step1/index.html
+++ b/step1/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Basic Setup</a>
+                    <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step1/index.html">Basic Setup</a>
                 </li>
                 <li>
                     <a href="#">Repositioning Our Planets</a>
