--- a/step1/index.html
+++ b/step1/index.html
@@ -44,16 +44,16 @@
                     <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step1/index.html">Basic Setup</a>
                 </li>
                 <li>
-                    <a href="#">Repositioning Our Planets</a>
+                    <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step2/index.html">Repositioning Our Planets</a>
                 </li>
                 <li>
-                    <a href="#">Lighting Things Up</a>
+                    <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step3/index.html">Lighting Things Up</a>
                 </li>
                 <li>
-                    <a href="#">Creating Our Orbit</a>
+                    <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step4/index.html">Creating Our Orbit</a>
                 </li>
                 <li>
-                    <a href="#">Adding Animations</a>
+                    <a href="https://www.http://jjegbe01.github.io/cssSolarSystem/step5/index.html">Adding Animations</a>
                 </li>
             </ul>
         </div>
