--- a/step1/index.html
+++ b/step1/index.html
@@ -41,19 +41,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="jjegbe01.github.io/cssSolarSystem/step1/index.html">Basic Setup</a>
+                    <a href="/cssSolarSystem/step1/index.html">Basic Setup</a>
                 </li>
                 <li>
-                    <a href="jjegbe01.github.io/cssSolarSystem/step2/index.html">Repositioning Our Planets</a>
+                    <a href="/cssSolarSystem/step2/index.html">Repositioning Our Planets</a>
                 </li>
                 <li>
-                    <a href="jjegbe01.github.io/cssSolarSystem/step3/index.html">Lighting Things Up</a>
+                    <a href="/cssSolarSystem/step3/index.html">Lighting Things Up</a>
                 </li>
                 <li>
-                    <a href="jjegbe01.github.io/cssSolarSystem/step4/index.html">Creating Our Orbit</a>
+                    <a href="/cssSolarSystem/step4/index.html">Creating Our Orbit</a>
                 </li>
                 <li>
-                    <a href="jjegbe01.github.io/cssSolarSystem/step5/index.html">Adding Animations</a>
+                    <a href="/cssSolarSystem/step5/index.html">Adding Animations</a>
                 </li>
             </ul>
         </div>
