implemented sidebar to all steps

--- a/step3/index.html
+++ b/step3/index.html
@@ -33,6 +33,9 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
+        <div id="wrapper">
+
+        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -41,19 +44,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Basic Setup</a>
+                    <a href="/cssSolarSystem/step1/index.html">Basic Setup</a>
                 </li>
                 <li>
-                    <a href="#">Repositioning Our Planets</a>
+                    <a href="/cssSolarSystem/step2/index.html">Repositioning Our Planets</a>
                 </li>
                 <li>
-                    <a href="#">Lighting Things Up</a>
+                    <a href="/cssSolarSystem/step3/index.html">Lighting Things Up</a>
                 </li>
                 <li>
-                    <a href="#">Creating Our Orbit</a>
+                    <a href="/cssSolarSystem/step4/index.html">Creating Our Orbit</a>
                 </li>
                 <li>
-                    <a href="#">Adding Animations</a>
+                    <a href="/cssSolarSystem/step5/index.html">Adding Animations</a>
                 </li>
             </ul>
         </div>
