--- a/step5/index.html
+++ b/step5/index.html
@@ -37,29 +37,23 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        CSS Solar System
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="/cssSolarSystem/step1/index.html">Basic Setup</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="/cssSolarSystem/step2/index.html">Repositioning Our Planets</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="/cssSolarSystem/step3/index.html">Lighting Things Up</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="/cssSolarSystem/step4/index.html">Creating Our Orbit</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
+                    <a href="/cssSolarSystem/step5/index.html">Adding Animations</a>
                 </li>
             </ul>
         </div>
