Finishing touches, added button back in

--- a/step3/index.html
+++ b/step3/index.html
@@ -71,7 +71,8 @@
             <img id="earth" src="http://goo.gl/41IWnf">
         </div>
         
-			
+			                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+
 			
                     
         </div>
