--- a/step1/index.html
+++ b/step1/index.html
@@ -67,7 +67,8 @@
         <img id="earth" src="http://goo.gl/41IWnf">
         
 			
-			
+			                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+
                     
         </div>
         <!-- /#page-content-wrapper -->
